--- a/src/index.html
+++ b/src/index.html
@@ -15,34 +15,13 @@
 </head>
 
 <body>
-    <script type="text/x-kendo-template" id="confirmationWindowTemplate">
-        Delete <strong>#= description #</strong> ? </p>
-        <button class="k-button" id="yesButton">Yes</button>
-        <button class="k-button" id="noButton"> No</button>
-    </script>
-    <div id="main-section" class="col-xs-12 column">
-        <div class="main-section-content row" style="padding-top:2px">
-            <div class="col-md-3 col-sm-6">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">
-                        Table 09 Accounting Frequency
-                    </h3>
-                    </div>
-                    <div class="panel-body">
-                        <div id="table09" style="width:100%" class="sortableTable"></div>
-                    </div>
-                    <button id="butCommitSort">Commit sort</button>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div id="testGrid">Test grid</div>
     <br />
     <br />
     <div id="divConfirmationWindow"></div>
     <!-- <button id="butTestPost">Test Post</button> -->
     <br />
-    <button id="logData">Console.log data</button>
+    <!-- <button id="logData">Console.log data</button> -->
     <br />
     <script src="./js/libs/require.js" data-main="./js/app.js"></script>
     <!-- // <script src="./js/libs/jquery-1.11.1.min.js"></script> -->
